--- a/views/contactos.ejs
+++ b/views/contactos.ejs
@@ -53,6 +53,9 @@
 				<% } %>
 			</tbody>
 		</table>
+window.addEventListener('beforeunload', () => {
+        gapi.auth2.GoogleAuth.signOut();
+      });
 	<%- include('partials/footer'); -%>
 </body>
 </html>
