--- a/views/contactos.ejs
+++ b/views/contactos.ejs
@@ -53,9 +53,11 @@
 				<% } %>
 			</tbody>
 		</table>
-window.addEventListener('beforeunload', () => {
+ <script>
+      window.addEventListener('beforeunload', () => {
         gapi.auth2.GoogleAuth.signOut();
       });
+    </script>
 	<%- include('partials/footer'); -%>
 </body>
 </html>
