--- a/views/cv.ejs
+++ b/views/cv.ejs
@@ -40,5 +40,6 @@
         <p id="lav" class="contact-form__p">Durante este per&iacuteodo, he brindado servicios de mantenimiento y reparaci&oacuten de computadoras de manera independiente. He solucionado problemas de hardware y software, realizado actualizaciones y optimizado el rendimiento de sistemas inform&aacuteticos para clientes particulares. Mi enfoque se ha centrado en ofrecer soluciones eficientes y confiables para garantizar el funcionamiento &oacuteptimo de los equipos.</p>
       </div>
     </div>
+<%- include('partials/footer'); -%>
   </body>
 </html>
